toolzのチュートリアル内容を追加

--- a/SciPyの疎行列で大量でデータの前処理を加速させる.ipynb
+++ b/SciPyの疎行列で大量でデータの前処理を加速させる.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ふだん、広告分野での機械学習を開発している長谷川といいます。  \n",
+    "広告分野での機械学習システムを開発している長谷川といいます。  \n",
     "Web広告では一日に膨大な量のリクエストを受けるとともに、その特徴量の種類も非常に豊富なため、どうしても使用メモリ量や実行時間がボトルネックになることが多々あります。  \n",
-    "そのため、日々細かい改善を繰り返しながら、システムを改善しているのですが、その際に`scipy.sparse`の性質を利用することで、実行時間を改善できたことが多々があったので、そのうちから応用例をいくつかを紹介します。"
+    "そのため、塵も積もればの精神で、日々細かい改善を繰り返しながら、パフォーマンスを改善しているのですが、その際に`scipy.sparse`の性質を利用することで、実行時間とメモリ使用量を改善できたことがあったので、そのことを元にして、いくつか例を紹介します。"
    ]
   },
   {
@@ -419,12 +419,12 @@
    "metadata": {},
    "source": [
     "### パフォーマンス\n",
-    "重要なのは、実行時間と使用するメモリがが本当に改善されているかです。それを確認するため、以下のように1000種類のカテゴリを持つ500万レコードのデータセットを想定して実験してみます。"
+    "重要なのは、実行時間と使用するメモリがが本当に改善されているかです。それを確認するため、以下のように1000種類のカテゴリを持つ500万レコードのデータセットを想定して実験してみます。(簡単のため、すでにカテゴリごとのindexは割り振られているとします。)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,17 +457,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.53 s ± 41.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(5000000, 1000)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -494,7 +497,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 4954.54 MiB, increment: 4639.68 MiB\n"
+      "peak memory: 4770.79 MiB, increment: 4558.70 MiB\n"
      ]
     }
    ],
@@ -526,17 +529,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.08 s ± 20.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(5000000, 1000)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -564,7 +570,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 407.41 MiB, increment: 0.00 MiB\n"
+      "peak memory: 388.10 MiB, increment: 0.00 MiB\n"
      ]
     }
    ],
@@ -599,17 +605,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "56.7 ms ± 2.94 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(5000000, 1000)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -629,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -638,7 +647,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 309.39 MiB, increment: 0.00 MiB\n"
+      "peak memory: 388.16 MiB, increment: 0.01 MiB\n"
      ]
     }
    ],
@@ -730,7 +739,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x102da6b70>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x10fdec940>"
       ]
      },
      "execution_count": 20,
@@ -782,7 +791,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x113043a90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1308d8208>"
       ]
      },
      "execution_count": 21,
@@ -832,7 +841,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "82.3 ms ± 1.26 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "80.6 ms ± 1.22 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -850,7 +859,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.05 ms ± 143 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "944 µs ± 23.9 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -877,18 +886,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`sparse_matrix`の性質をうまく利用すると、大量のデータにおけるデータ分析が格段に速くなることがあってとても便利になることがわかりました。   \n",
-    "データ量が多くなれば多くなるほど、`scipy.sparse`を使用したほうが処理は効率化できます。  \n",
-    "ただし、sparse matrix の性質を知った上で利用しないと、むしろ処理の速度を悪化させる場合もあるので、注意が必要です。`scipy.sparse`の他の性質については[こちらの本](https://www.oreilly.co.jp/books/9784873118604/)に非常に丁寧にまとまっているので、とてもおすすめです。  \n",
-    "データ処理でもろもろ工夫している例はまだまだ他にもいくつかあるので、ぼそぼそ上げてければと思います。\n"
+    "`sparse_matrix`の性質をうまく利用すると、データ量が多くなれば多くなるほど、`scipy.sparse`をうまく利用すると、実行時間、メモリともに効率化できることが多々あります。  \n",
+    "ただし、`scipy.sparse` の性質を知った上で利用しないと、むしろ処理の速度を悪化させる場合があるのもあるので、注意が必要です。  \n",
+    "また、コード自体の可読性も下がるので、極端に巨大なデータでなかったり、そもそも処理を効率化させる必要がない場合は、一般的なモジュールのメソッドを使うほうがおそらく良いです。  \n",
+    "`scipy.sparse`の他の性質については[こちらの本](https://www.oreilly.co.jp/books/9784873118604/)に非常に丁寧にまとまっているので、とてもおすすめです。  \n",
+    "データ前処理でもろもろ工夫している例はまだまだ他にもいくつかあるので、ぼそぼそ上げてければと思います。\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
